--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-textarea-autosize": "^8.5.6"
   },
   "devDependencies": {
