--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*", "@/*"]
+    },
     "plugins": [
       {
         "name": "next"
@@ -28,7 +32,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx"
-  ],
+, "src/app/api/auth/[...all]/route.js"  ],
   "exclude": [
     "node_modules"
   ]
